Minor responsiveness improvements
Improved menu items size, scrolling in IE.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>
             Daniel Dakev | Home
         </title>
-        <link rel="stylesheet" type="text/css" href="indexStyle.css"></style>
+        <link rel="stylesheet" type="text/css" href="indexStyle.css">
         <script type="text/javascript" src="scrollCode.js"></script>
     </head>
     <body onload="javascript:startAnimations();">
