Improvements on responsiveness
Added media queries to use specific styles for smaller displays, so that
the site looks good on mobile devices.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
         <title>
             Daniel Dakev | Home
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="indexStyle.css">
+        <link rel="stylesheet" media="(max-width: 640px)" href="indexStyle-mobile.css">
         <script type="text/javascript" src="scrollCode.js"></script>
     </head>
     <body onload="javascript:startAnimations();">
