Progress on hamburger menu
This update introduces the hamburger menu for smaller screens and
implements the fly-in menu which shifts the contents right. There are
several bugs that have appeared and need to be dealt with, but after
they are fixed, the site should be mobile-friendly.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <script type="text/javascript" src="scrollCode.js"></script>
     </head>
     <body onload="javascript:startAnimations();">
+        <input type="checkbox" id="hamMenu">
+        <label id="hamMenuLabel" for="hamMenu">
+            <object id="hamImage" data="graphics/hamIcon.svg"></object>
+        </label>
         <div id="topBar">
             <div id="logo">
                 <object id="logoImage" data="graphics/logo.svg"></object>
