--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>
             Daniel Dakev | Home
         </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <link rel="stylesheet" type="text/css" href="indexStyle.css">
         <link rel="stylesheet" media="(max-width: 640px)" href="indexStyle-mobile.css">
         <script type="text/javascript" src="scrollCode.js"></script>
