Some more tweaks
Fixed the hover effect on the menu, clipping contents over top bar, so
they are not visible on top of the menu and logo; started working on the
projects page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Daniel Dakev | Home
+            Home | Daniel Dakev
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <link rel="stylesheet" type="text/css" href="indexStyle.css">
@@ -63,6 +63,15 @@
             <div class="slide" id="about">
             </div>
             <div class="slide" id="projects">
+                <div class="contents" id="projectsContents">
+                    <div class="project">
+                        <div class="projPic">
+                        </div>
+                        <p class="projDesc">
+                        Lorem ipsum whatever
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="slide" id="contact">
             </div>
