SpaceInvaders gui update
This update includes a graphical user interface displaying the score,
number of powerups collected and lives with a possibility of more things
being added. Also, images are now pre-loaded for faster loading times.

--- a/spaceInvaders/index.htm
+++ b/spaceInvaders/index.htm
@@ -1,5 +1,11 @@
 <html>
 <head>
+<style type="text/css">
+@font-face {
+    font-family: 'KenvectorFuture';
+    src: url('fonts/main.ttf');
+}    
+</style>
 <script type="text/javascript" src="game.js"></script>
 </head>
 <body onload="javascript: initialize();">
