SpaceInvaders screen size bug fix
This update fixes the static canvas size by dynamically resizing the
canvas and moving all the objects in it proportionally. The game should
now work on all resolutions and screen sizes, although it will look much
better on bigger ones.

--- a/spaceInvaders/index.htm
+++ b/spaceInvaders/index.htm
@@ -9,6 +9,6 @@
 <script type="text/javascript" src="game.js"></script>
 </head>
 <body onload="javascript: initialize();">
-    <canvas id='gameWindow' width=1366 height=643 style="position:absolute; top:0px; left:0px; z-index:0;"></canvas>
+    <canvas id='gameWindow' style="position:absolute; top:0px; left:0px; z-index:0;"></canvas>
 </body>
 </html>
