--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="contentPage">
             <div id="topBar">
                 <div id="logo">
-                    <object id="logoImage" data="graphics/logo.svg"></object>
+                    <object id="logoImage" data="graphics/nameLogoAnimated.svg"></object>
                 </div>
                 <div id="menu">
                     <a href="#home" class="menuItem" onclick="javascript:scrollToPage(0);">
@@ -47,10 +47,10 @@
             </div>
             <div class="slide" id="home">
                 <div class="contents" id="homeContents">
-                    <h1 class="titleText" id="hi">Hi! I'm</h1><br>
-                    <h1 class="titleText" id="name">Daniel Dakev</h1><br>
+                    <h1 class="titleText dark" id="hi">Hi! I'm</h1><br>
+                    <h1 class="titleText light" id="name">Daniel Dakev</h1><br>
                     <div id="nameUnderline"></div>
-                    <span id="subtitle">Front-end Programmer; Designer; Android Developer</span>
+                    <span class="subtitle">Computer Science Student; Front-end Programmer; Android Developer</span>
                 </div>
                 <div id="scrollHint">
                     <span>Scroll</span>
@@ -61,19 +61,260 @@
                 </div>
             </div>
             <div class="slide" id="about">
+                <div class="contents" id="aboutContents">
+                    <h1 class="titleText light">Here's what I can do</h1>
+                    <div id="progLangs">
+                        <div class="blContainer" id="bl-cpp">
+                            <div class="pieBg">
+                                <div class="leftHalf">
+                                    <div class="leftFill"></div>
+                                </div>
+                                <div class="rightHalf">
+                                    <div class="rightFill"></div>
+                                </div>
+                            </div>
+                            <div class="pieFg">
+                                <span class="bigLang cpp"></span>
+                            </div>
+                        </div>
+                        <div class="blContainer" id="bl-java">
+                            <div class="pieBg">
+                                <div class="leftHalf">
+                                    <div class="leftFill"></div>
+                                </div>
+                                <div class="rightHalf">
+                                    <div class="rightFill"></div>
+                                </div>
+                            </div>
+                            <div class="pieFg">
+                                <span class="bigLang java"></span>
+                            </div>
+                        </div>
+                        <div class="blContainer" id="bl-csharp">
+                            <div class="pieBg">
+                                <div class="leftHalf">
+                                    <div class="leftFill"></div>
+                                </div>
+                                <div class="rightHalf">
+                                    <div class="rightFill"></div>
+                                </div>
+                            </div>
+                            <div class="pieFg">
+                                <span class="bigLang csharp"></span>
+                            </div>
+                        </div>
+                        <div class="blContainer" id="bl-javascript">
+                            <div class="pieBg">
+                                <div class="leftHalf">
+                                    <div class="leftFill"></div>
+                                </div>
+                                <div class="rightHalf">
+                                    <div class="rightFill"></div>
+                                </div>
+                            </div>
+                            <div class="pieFg">
+                                <span class="bigLang javascript"></span>
+                            </div>
+                        </div>
+                        <div class="blContainer" id="bl-html">
+                            <div class="pieBg">
+                                <div class="leftHalf">
+                                    <div class="leftFill"></div>
+                                </div>
+                                <div class="rightHalf">
+                                    <div class="rightFill"></div>
+                                </div>
+                            </div>
+                            <div class="pieFg">
+                                <span class="bigLang html5"></span>
+                            </div>
+                        </div>
+                        <div class="blContainer" id="bl-css">
+                            <div class="pieBg">
+                                <div class="leftHalf">
+                                    <div class="leftFill"></div>
+                                </div>
+                                <div class="rightHalf">
+                                    <div class="rightFill"></div>
+                                </div>
+                            </div>
+                            <div class="pieFg">
+                                <span class="bigLang css3"></span>
+                            </div>
+                        </div>
+                        <br>
+                        <span class="subtitle">In addition to:</span><br>
+                        <div class="miscSkills">
+                            <span>Python</span>
+                            <span>PHP</span>
+                            <span>SQL</span>
+                            <span>XML</span>
+                            <span>.NET</span>
+                            <span>Android</span>
+                            <span>Adobe Photoshop</span>
+                            <span>Adobe Illustrator</span>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="slide" id="projects">
                 <div class="contents" id="projectsContents">
-                    <div class="project">
+                    <br><h1 class="titleText light" id="projectsTitle">Here are some of my projects</h1><br><br>
+                    <span class="subtitle">You can find all of them on <a href="#">my Github</a>.</span><br><br><br><br><br><br>
+                    <div class="project" id="unknock">
+                        <p class="projTitle">
+                        UnKnock
+                        </p>
+                        <div class="projLang">
+                            <span class="lang java"></span>
+                            <span class="lang android"></span>
+                        </div>
+                        <br>
                         <div class="projPic">
                         </div>
                         <p class="projDesc">
-                        Lorem ipsum whatever
+                        Unlocks Android smartphones using a secret, pre-recorded knock pattern. Algorithm determines the resemblance between the input and the pattern in memory.
+                        </p>
+                    </div>
+                    <div class="project">
+                        <p class="projTitle">
+                        Project 2
+                        </p>
+                        <div class="projLang">
+                        </div>
+                        <br>
+                        <div class="projPic">
+                        </div>
+                        <p class="projDesc">
+                        Project description
+                        </p>
+                    </div>
+                    <div class="project">
+                        <p class="projTitle">
+                        Project 3
+                        </p>
+                        <div class="projLang">
+                        </div>
+                        <br>
+                        <div class="projPic">
+                        </div>
+                        <p class="projDesc">
+                        Project description
+                        </p>
+                    </div>
+                    <div class="project">
+                        <p class="projTitle">
+                        Project 4
+                        </p>
+                        <div class="projLang">
+                        </div>
+                        <br>
+                        <div class="projPic">
+                        </div>
+                        <p class="projDesc">
+                        Project description
+                        </p>
+                    </div>
+                    <div class="project">
+                        <p class="projTitle">
+                        Project 5
+                        </p>
+                        <div class="projLang">
+                        </div>
+                        <br>
+                        <div class="projPic">
+                        </div>
+                        <p class="projDesc">
+                        Project description
+                        </p>
+                    </div>
+                    <div class="project">
+                        <p class="projTitle">
+                        Project 6
+                        </p>
+                        <div class="projLang">
+                        </div>
+                        <br>
+                        <div class="projPic">
+                        </div>
+                        <p class="projDesc">
+                        Project description
                         </p>
                     </div>
                 </div>
             </div>
             <div class="slide" id="contact">
+                <div class="contents" id="contactContents">
+                    <div id="socialForm">
+                        <h1 class="titleText light">Ckeck out my social profiles</h1>
+                        <div id="socialIcons">
+                            <span class="socIconContainer">
+                                <a href="#">
+                                    <object class="socIcon" data="graphics/social/github.svg">
+                                    </object>
+                                </a>
+                            </span>
+                            <span class="socIconContainer">
+                                <a href="#">
+                                    <object class="socIcon" data="graphics/social/linkedin.svg">
+                                    </object>
+                                </a>
+                            </span><br>
+                            <span class="socIconContainer">
+                                <a href="#">
+                                    <object class="socIcon" data="graphics/social/codepen.svg">
+                                    </object>
+                                </a>
+                            </span>
+                            <span class="socIconContainer">
+                                <a href="#">
+                                    <object class="socIcon" data="graphics/social/gmail.svg">
+                                    </object>
+                                </a>
+                            </span>
+                            <span class="socIconContainer">
+                                <a href="#">
+                                    <object class="socIcon" data="graphics/social/googlep.svg">
+                                    </object>
+                                </a>
+                            </span><br>
+                            <span class="socIconContainer">
+                                <a href="#">
+                                    <object class="socIcon" data="graphics/social/facebook.svg">
+                                    </object>
+                                </a>
+                            </span>
+                            <span class="socIconContainer">
+                                <a href="#">
+                                    <object class="socIcon" data="graphics/social/twitter.svg">
+                                    </object>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="verticalLine" id="vl1">
+                    </div>
+                    <div id="or">
+                        <span class="subtitle">or</span>
+                    </div>
+                    <div class="verticalLine" id="vl2">
+                    </div>
+                    <div id="contactForm">
+                        <h1 class="titleText dark">Drop me a line</h1>
+                        <form id="cForm">
+                            <div class="tField">
+                                <input name="name" id="nameBox" type="text" />
+                                <label for="name" id="nameLabel" class="cLabel">Name</label>
+                            </div>
+                            <div class="tField">
+                                <input name="email" id="emailBox" type="text" />
+                                <label for="email" id="emailLabel" class="cLabel">Email address</label>
+                            </div>
+                            <textarea name="content" form="cForm" id="contentBox" placeholder="Your message to me"></textarea>
+                            <input type="submit" value="Send" />
+                        </form>
+                    </div>
+                </div>
             </div>
             <div id="copyright">
                 <span id="credits">Designed and developed by Daniel Dakev</span>
