--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" media="(max-width: 640px)" href="indexStyle-mobile.css">
         <script type="text/javascript" src="scrollCode.js"></script>
     </head>
-    <body onload="javascript:startAnimations();">
+    <body onload="javascript:init();">
             <label id="hamMenuLabel" for="hamMenu">
                 <object id="hamImage" data="graphics/hamIcon.svg"></object>
             </label>
