Fixes and Updates
Several minor bugs fixed, backgrounds changed, color palette changed,
about slide slightly changed, some lang icons modified to look better.

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                                 I'm a second year undergraduate student in <b class="accent">Atlanta, GA</b>, and I spend my free time writing code and developing practical software. I build responsive and interactive <b class="accent">websites</b>, GUI and console <b class="accent">applications for Windows</b>, and <b class="accent">Android apps</b>. I also do my own <b class="accent">UI/UX design</b> with the help of Illustrator and Photoshop. I'm currently looking for an <b class="accent">internship</b>.
                             </p>
                             <p class="bigSubtitle" id="schoolLabel">
-                                Currently attending:
+                                Education
                             </p>
                             <span class="educationIcon">
                             </span>
-                            <span class="bigSubtitle">
+                            <span class="subtitle" id="eduSchool">
                                 Georgia State University
                             </span><br>
                             <span class="subtitle" id="eduLabel">
@@ -176,7 +176,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <br>
                             <p class="bigSubtitle" id="miscSkillsLabel">In addition to:</p>
                             <div class="miscSkills">
                                 <span>Python</span>
@@ -196,7 +195,7 @@
             </div>
             <div class="slide" id="projects">
                 <div class="contents" id="projectsContents">
-                    <h1 class="titleText light" id="projectsTitle">Here are some of my projects</h1><br>
+                    <h1 class="titleText light" id="projectsTitle">My Projects</h1><br>
                     <span class="subtitle"><a href="https://github.com/ddakev" target="_blank" class="btnLink">See them all on my Github</a></span>
                     <div id="projectsContainer">
                         <div class="project" id="unknock">
@@ -485,7 +484,7 @@
                             </div>
                             <textarea name="content" form="cForm" id="contentBox" cols="66" rows="9" placeholder="Your message to me"></textarea>
                             <div class="notification" id="textareaNotif">
-                                What did you want to say to me?
+                                What do you want to say to me?
                             </div>
                             <div class="notArrow">
                             </div>
