--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>
@@ -50,16 +51,15 @@
                 </div>
             </div>
             <div class="slide" id="home">
-                <div class="contents" id="homeContents">
-                    <div id="myPicture">
+                    <div id="picContainer">
+                        <div id="myPicture">
+                        </div>
                     </div>
                     <div class="textBox">
                         <h1 class="titleText dark" id="hi">Hi! I'm</h1><br>
-                        <h1 class="titleText accent" id="name">Daniel Dakev</h1><br>
-                        <div id="nameUnderline"></div>
-                        <span class="subtitle">Computer Science Student; Front-end Programmer; Software Developer</span>
+                        <h1 class="titleText light" id="name">Daniel Dakev</h1><br>
+                        <span class="subtitle">Computer Science Student;<br> Front-end Programmer;<br> Software Developer</span>
                     </div>
-                </div>
                 <div id="scrollHintWrapper">
                     <div id="scrollHint">
                         <div id="scrollHintContainer">
@@ -195,7 +195,7 @@
             </div>
             <div class="slide" id="projects">
                 <div class="contents" id="projectsContents">
-                    <h1 class="titleText light" id="projectsTitle">My Projects</h1><br>
+                    <h1 class="titleText light" id="projectsTitle">Projects</h1><br>
                     <span class="subtitle"><a href="https://github.com/ddakev" target="_blank" class="btnLink">See them all on my Github</a></span>
                     <div id="projectsContainer">
                         <div class="project" id="unknock">
