Cosmetic changes, project page fixes

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                 Please provide an email address
                             </div>
                         </div>
-                        <textarea name="content" form="cForm" id="contentBox" cols="66" rows="9" placeholder="Your message to me"></textarea>
+                        <textarea name="content" form="cForm" id="contentBox" cols="66" rows="9" placeholder="Hey Daniel, let's get in touch."></textarea>
                         <div class="notification" id="textareaNotif">
                             What do you want to say to me?
                         </div>
