--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div id="scrollHintContainer">
                         <span>Scroll</span>
                         <object id="downarr" data="graphics/downarrow1.svg"></object>
-                        <a href="#about" id="hintSelector" onclick="javascript:scrollToPage(1);">
+                        <a href="javascript:void(0);" id="hintSelector" onclick="javascript:scrollToPage(1);">
                         </a>
                         <span>Down</span>
                     </div>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="slide" id="about">
-                <h1 class="titleText dark">About</h1><br>
+                <h1 class="titleText">About</h1><br>
                 <span class="subtitle"><a href="https://drive.google.com/file/d/0Bzq3popibj_fUnhpOEE0OFhUcUk/view?usp=sharing" target="_blank" class="btnLink">View printable Resume</a></span>
                 <div id="aboutBg">
                     <div id="aboutInfo">
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="slide" id="projects">
-                <h1 class="titleText light" id="projectsTitle">Projects</h1><br>
+                <h1 class="titleText" id="projectsTitle">Projects</h1><br>
                 <span class="subtitle"><a href="https://github.com/ddakev" target="_blank" class="btnLink">See them all on my Github</a></span>
                 <div id="projectsContainer">
                     <div class="project" id="unknock">
@@ -403,7 +403,7 @@
                 </div>
             </div>
             <div class="slide" id="contact">
-                <h1 class="titleText light">Contact</h1><br>
+                <h1 class="titleText">Contact</h1><br>
                 <div id="socialForm">
                     <div id="socialIcons">
                         <span class="socIconContainer">
