--- a/index.html
+++ b/index.html
@@ -478,7 +478,8 @@
                         </div>
                         <div class="notArrow">
                         </div>
-                        <input id="sendBtn" type="submit" value="Send" />
+                        <input id="sendBtn" type="button" value="Send" />
+                        <div id="sendNotification"></div>
                     </form>
                 </div>
             </div>
