Cosmetic changes, added project 6

--- a/index.html
+++ b/index.html
@@ -322,11 +322,11 @@
                                             See code
                                         </span>
                                     </a>
-                                    <a href="#" target="_blank" class="projButton">
-                                        <div class="demoIcon">
+                                    <a href="https://github.com/ddakev/HardestGameEver/archive/master.zip" target="_blank" class="projButton">
+                                        <div class="downloadIcon">
                                         </div><br>
                                         <span class="projectText">
-                                            Live Demo
+                                            Download
                                         </span>
                                     </a>
                                 </div>
@@ -367,33 +367,35 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project">
+                    <div class="project" id="roadrant">
                         <div class="projectWrapper">
                             <div class="projPic">
                                 <div class="projInfo">
                                     <p class="projTitle">
-                                    Project 6
+                                    Road Rant
                                     </p>
                                     <div class="projLang">
+                                        <span class="lang java"></span>
+                                        <span class="lang android"></span>
                                     </div>
                                     <br>
                                     <p class="projDesc">
-                                    Project description
+                                    An Android app that lets you report bad drivers on the road and sends the data to a server.
                                     </p>
                                 </div>
                                 <div class="projActions">
-                                    <a href="#" target="_blank" class="projButton">
+                                    <a href="https://github.com/ddakev/RoadRant" target="_blank" class="projButton">
                                         <div class="codeIcon">
                                         </div><br>
                                         <span class="projectText">
                                             See code
                                         </span>
                                     </a>
-                                    <a href="#" target="_blank" class="projButton">
-                                        <div class="demoIcon">
+                                    <a href="https://github.com/ddakev/RoadRant/archive/master.zip" target="_blank" class="projButton">
+                                        <div class="downloadIcon">
                                         </div><br>
                                         <span class="projectText">
-                                            Live Demo
+                                            Download
                                         </span>
                                     </a>
                                 </div>
