--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <span class="educationIcon">
                         </span>
                         <span class="subtitle" id="eduSchool">
-                            Georgia State University
+                            Georgia Institute of Technology
                         </span><br>
                         <span class="subtitle" id="eduLabel">
                             Class of 2019
